--- a/jenkins_pipeline/jenkinsfile
+++ b/jenkins_pipeline/jenkinsfile
@@ -20,7 +20,7 @@ pipeline{
         stage("Invoke Playbook"){
             steps{
                 echo "playbook --> ${params.Playbook}"
-                ansiblePlaybook installation: 'ansible', inventory: '/etc/ansible/hosts', playbook: '/etc/ansible/playbook/${params.Playbook}', vaultTmpPath: ''
+                ansiblePlaybook installation: 'ansible', inventory: '/etc/ansible/hosts', playbook: "/etc/ansible/playbook/${params.Playbook}", vaultTmpPath: ''
             }
         }
 
