--- a/ansible_commands/docker.yml
+++ b/ansible_commands/docker.yml
@@ -39,6 +39,11 @@
         value: 0
       become: yes
 
+    - name: Install docker-ce-rootless-extras
+      yum:
+        name: docker-ce-rootless-extras
+        state: latest
+
     - name: Install Docker
       package:
         name: docker-ce
