--- a/ansible_commands/docker.yml
+++ b/ansible_commands/docker.yml
@@ -39,9 +39,24 @@
         value: 0
       become: yes
 
-    - name: Install docker-ce-rootless-extras
+    - name: Line in FIle
+      blockinfile:
+        path: /etc/yum.repos.d/docker-ce.repo
+        block: |
+          [centos-extras]
+          name=Centos extras - $basearch
+          baseurl=http://mirror.centos.org/centos/7/extras/x86_64
+          enabled=1
+          gpgcheck=1
+          gpgkey=http://centos.org/keys/RPM-GPG-KEY-CentOS-7
+        state: latest
+    
+    - name: Install lvm2
       yum:
-        name: docker-ce-rootless-extras
+        name: 
+          - slirp4netns 
+          - fuse-overlayfs
+          - container-selinux
         state: latest
 
     - name: Install Docker
