--- a/ansible_commands/docker.yml
+++ b/ansible_commands/docker.yml
@@ -49,7 +49,7 @@
           enabled=1
           gpgcheck=1
           gpgkey=http://centos.org/keys/RPM-GPG-KEY-CentOS-7
-        state: latest
+        state: present
     
     - name: Install lvm2
       yum:
