--- a/jenkins_pipeline/jenkinsfile
+++ b/jenkins_pipeline/jenkinsfile
@@ -19,6 +19,14 @@ pipeline{
                 sh ("sudo ls -al /etc/ansible/playbook/")
             }        
         }
+
+        stage ("Copying roles to ansible roles"){
+            sh ("sudo mkdir -p /etc/ansible/roles")
+            sh ("cp -r ${pwd}/workspace/ansible-automation/ansible_commands/roles/* /etc/ansible/roles")
+            sh ("sudo ls -al /etc/ansible/roles/")
+
+        }
+        
         stage("Invoke Playbook"){
             steps{
                 echo "playbook --> ${params.Playbook}"
